# hand_manipulation

./: MJDATA.TXT  MUJOCO_LOG.TXT  README-ARCHIVE.md  README.md  dockerfile  mjmodel.xml  pyproject.toml  start_hand.sh  start_hand_dev.sh
assets/: left_hand.xml  scene_left.xml
assets/allegro/: left_hand.xml  scene_left.xml
hand_manipulation/: main.py  main_allegro.py  main_allegro_changed.py  main_shadow.py  shadow_hand.py
hand_manipulation/hands/: allegro_hand.py  allegro_hand_changed.py  shadow_hand.py
hand_manipulation/utils/: control.py  grasping.py  mujoco_utils.py
scene/: hand_and_scene.xml  table.xml
scripts/: generate_qr_code.py
test/: test_grasp_matrix.py
